--- a/DukeGame/Config/DukeEngine.ini
+++ b/DukeGame/Config/DukeEngine.ini
@@ -1128,3 +1128,11 @@ ResetStats=0
 [AppCompat]
 CompatLevelComposite=5
 
+[WinDrv.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
+
