Map extension changed to dnfmap

--- a/DukeGame/Config/DefaultEngine.ini
+++ b/DukeGame/Config/DefaultEngine.ini
@@ -2,10 +2,10 @@
 BasedOn=..\Engine\Config\BaseEngine.ini
 
 [URL]
-MapExt=umap
-Map=ExampleEntry.umap
-LocalMap=ExampleEntry.umap
-TransitionMap=ExampleEntry.umap
+MapExt=dnfmap
+Map=DukeEntry.dnfmap
+LocalMap=DukeEntry.dnfmap
+TransitionMap=DukeEntry.dnfmap
 EXEName=DukeGame.exe
 DebugEXEName=DEBUG-DukeGame.exe
 GameName=Duke Nukem Forever
@@ -19,7 +19,7 @@ GameNameShort=EG
 +Paths=..\..\DukeGame\__Trashcan
 +LocalizationPaths=..\..\DukeGame\Localization
 SavePath=..\..\DukeGame\Save
-+Extensions=umap
++Extensions=dnfmap
 SeekFreePCPaths=..\..\DukeGame\CookedPC
 SeekFreePCExtensions=xxx
 MaxObjectsNotConsideredByGC=33476
