--- a/DukeGame/Config/DukeEngine.ini
+++ b/DukeGame/Config/DukeEngine.ini
@@ -1,11 +1,11 @@
 [URL]
 Protocol=unreal
 Name=Player
-Map=ExampleEntry.umap
-LocalMap=ExampleEntry.umap
+Map=DukeEntry.dnfmap
+LocalMap=DukeEntry.dnfmap
 LocalOptions=
-TransitionMap=ExampleEntry.umap
-MapExt=umap
+TransitionMap=DukeEntry.dnfmap
+MapExt=dnfmap
 EXEName=DukeGame.exe
 DebugEXEName=DEBUG-DukeGame.exe
 SaveExt=usa
@@ -93,40 +93,40 @@ TextureStreamingBoundsMaterialName=EditorMaterials.Utilities.TextureStreamingBou
 TerrainErrorMaterialName=EngineDebugMaterials.MaterialError_Mat
 ProcBuildingSimpleMaterialName=EngineBuildings.ProcBuildingSimpleMaterial
 BuildingQuadStaticMeshName=EngineBuildings.BuildingQuadMesh
-ProcBuildingLODColorTexelsPerWorldUnit=0.075000
-ProcBuildingLODLightingTexelsPerWorldUnit=0.015000
+ProcBuildingLODColorTexelsPerWorldUnit=0.075
+ProcBuildingLODLightingTexelsPerWorldUnit=0.015
 MaxProcBuildingLODColorTextureSize=1024
 MaxProcBuildingLODLightingTextureSize=256
 UseProcBuildingLODTextureCropping=True
 ForcePowerOfTwoProcBuildingLODTextures=True
 bCombineSimilarMappings=False
-MaxRMSDForCombiningMappings=6.000000
+MaxRMSDForCombiningMappings=6.0
 ImageReflectionTextureSize=1024
 TerrainMaterialMaxTextureCount=16
 TerrainTessellationCheckCount=6
 TerrainTessellationCheckBorder=2.0
-TerrainTessellationCheckDistance=4096.000000
+TerrainTessellationCheckDistance=4096.0
 BeginUPTryCount=200000
 bStaticDecalsEnabled=True
 bDynamicDecalsEnabled=True
 bForceStaticTerrain=False
-LightingOnlyBrightness=(R=0.300000,G=0.300000,B=0.300000,A=1.000000)
-LightComplexityColors=(B=0,G=0,R=0,A=1)
-LightComplexityColors=(B=0,G=255,R=0,A=1)
-LightComplexityColors=(B=0,G=191,R=63,A=1)
-LightComplexityColors=(B=0,G=127,R=127,A=1)
-LightComplexityColors=(B=0,G=63,R=191,A=1)
-LightComplexityColors=(B=0,G=0,R=255,A=1)
-ShaderComplexityColors=(R=0.000000,G=1.000000,B=0.127000,A=1.000000)
-ShaderComplexityColors=(R=0.000000,G=1.000000,B=0.000000,A=1.000000)
-ShaderComplexityColors=(R=0.046000,G=0.520000,B=0.000000,A=1.000000)
-ShaderComplexityColors=(R=0.215000,G=0.215000,B=0.000000,A=1.000000)
-ShaderComplexityColors=(R=0.520000,G=0.046000,B=0.000000,A=1.000000)
-ShaderComplexityColors=(R=0.700000,G=0.000000,B=0.000000,A=1.000000)
-ShaderComplexityColors=(R=1.000000,G=0.000000,B=0.000000,A=1.000000)
-ShaderComplexityColors=(R=1.000000,G=0.000000,B=0.500000,A=1.000000)
-ShaderComplexityColors=(R=1.000000,G=0.900000,B=0.900000,A=1.000000)
-MaxPixelShaderAdditiveComplexityCount=900.000000
+LightingOnlyBrightness=(R=0.3,G=0.3,B=0.3,A=1.0)
+LightComplexityColors=(R=0,G=0,B=0,A=1)
+LightComplexityColors=(R=0,G=255,B=0,A=1)
+LightComplexityColors=(R=63,G=191,B=0,A=1)
+LightComplexityColors=(R=127,G=127,B=0,A=1)
+LightComplexityColors=(R=191,G=63,B=0,A=1)
+LightComplexityColors=(R=255,G=0,B=0,A=1)
+ShaderComplexityColors=(R=0.0,G=1.0,B=0.127,A=1.0)
+ShaderComplexityColors=(R=0.0,G=1.0,B=0.0,A=1.0)
+ShaderComplexityColors=(R=0.046,G=0.52,B=0.0,A=1.0)
+ShaderComplexityColors=(R=0.215,G=0.215,B=0.0,A=1.0)
+ShaderComplexityColors=(R=0.52,G=0.046,B=0.0,A=1.0)
+ShaderComplexityColors=(R=0.7,G=0.0,B=0.0,A=1.0)
+ShaderComplexityColors=(R=1.0,G=0.0,B=0.0,A=1.0)
+ShaderComplexityColors=(R=1.0,G=0.0,B=0.5,A=1.0)
+ShaderComplexityColors=(R=1.0,G=0.9,B=0.9,A=1.0)
+MaxPixelShaderAdditiveComplexityCount=900
 TimeBetweenPurgingPendingKillObjects=60
 bUseTextureStreaming=True
 bUseBackgroundLevelStreaming=True
@@ -148,17 +148,17 @@ CameraTranslationThreshold=10000
 PrimitiveProbablyVisibleTime=8.0
 PercentUnoccludedRequeries=0.125
 MaxOcclusionPixelsFraction=0.1
-MinTextureDensity=0.000000
-IdealTextureDensity=13.000000
-MaxTextureDensity=55.000000
-MinLightMapDensity=0.000000
-IdealLightMapDensity=0.050000
-MaxLightMapDensity=0.200000
-RenderLightMapDensityGrayscaleScale=1.000000
-RenderLightMapDensityColorScale=1.000000
+MinTextureDensity=0.0
+IdealTextureDensity=13.0
+MaxTextureDensity=55.0
+MinLightMapDensity=0.0
+IdealLightMapDensity=0.05
+MaxLightMapDensity=0.2
+RenderLightMapDensityGrayscaleScale=1.0
+RenderLightMapDensityColorScale=1.0
 bRenderLightMapDensityGrayscale=false
-LightMapDensityVertexMappedColor=(R=0.650000,G=0.650000,B=0.250000,A=1.000000)
-LightMapDensitySelectedColor=(R=1.000000,G=0.200000,B=1.000000,A=1.000000)
+LightMapDensityVertexMappedColor=(R=0.65,G=0.65,B=0.25,A=1.0)
+LightMapDensitySelectedColor=(R=1.0,G=0.2,B=1.0,A=1.0)
 bDisablePhysXHardwareSupport=True
 DemoRecordingDevice=Engine.DemoRecDriver
 bPauseOnLossOfFocus=FALSE
@@ -168,16 +168,16 @@ MaxParticleResize=0
 MaxParticleResizeWarn=0
 bCheckParticleRenderSize=True
 MaxParticleVertexMemory=131972
-NetClientTicksPerSecond=200.000000
-MaxTrackedOcclusionIncrement=0.100000
-TrackedOcclusionStepSize=0.100000
+NetClientTicksPerSecond=200
+MaxTrackedOcclusionIncrement=0.10
+TrackedOcclusionStepSize=0.10
 MipFadeInSpeed0=0.3
 MipFadeOutSpeed0=0.1
 MipFadeInSpeed1=2.0
 MipFadeOutSpeed1=1.0
-StatColorMappings=(StatName="AverageFPS",ColorMap=((In=15.000000,Out=(B=0,G=0,R=255,A=0)),(In=30.000000,Out=(B=0,G=255,R=255,A=0)),(In=45.000000,Out=(B=0,G=255,R=0,A=0))),DisableBlend=False)
-StatColorMappings=(StatName="Frametime",ColorMap=((In=1.000000,Out=(B=0,G=255,R=0,A=0)),(In=25.000000,Out=(B=0,G=255,R=0,A=0)),(In=29.000000,Out=(B=0,G=255,R=255,A=0)),(In=33.000000,Out=(B=0,G=0,R=255,A=0))),DisableBlend=False)
-StatColorMappings=(StatName="Streaming fudge factor",ColorMap=((In=0.000000,Out=(B=0,G=255,R=0,A=0)),(In=1.000000,Out=(B=0,G=255,R=0,A=0)),(In=2.500000,Out=(B=0,G=255,R=255,A=0)),(In=5.000000,Out=(B=0,G=0,R=255,A=0)),(In=10.000000,Out=(B=0,G=0,R=255,A=0))),DisableBlend=False)
+StatColorMappings=(StatName="AverageFPS",ColorMap=((In=15.0,Out=(R=255)),(In=30,Out=(R=255,G=255)),(In=45.0,Out=(G=255))))
+StatColorMappings=(StatName="Frametime",ColorMap=((In=1.0,Out=(G=255)),(In=25.0,Out=(G=255)),(In=29.0,Out=(R=255,G=255)),(In=33.0,Out=(R=255))))
+StatColorMappings=(StatName="Streaming fudge factor",ColorMap=((In=0.0,Out=(G=255)),(In=1.0,Out=(G=255)),(In=2.5,Out=(R=255,G=255)),(In=5.0,Out=(R=255)),(In=10.0,Out=(R=255))))
 PhysXGpuHeapSize=32
 PhysXMeshCacheSize=8
 bShouldGenerateSimpleLightmaps=TRUE
@@ -187,8 +187,8 @@ MinSmoothedFrameRate=22
 MaxSmoothedFrameRate=62
 bCheckForMultiplePawnsSpawnedInAFrame=FALSE
 NumPawnsAllowedToBeSpawnedInAFrame=2
-DefaultSelectedMaterialColor=(R=0.040000,G=0.020000,B=0.240000,A=1.000000)
-DefaultHoveredMaterialColor=(R=0.020000,G=0.020000,B=0.020000,A=1.000000)
+DefaultSelectedMaterialColor=(R=0.04,G=0.02,B=0.24,A=1.0)
+DefaultHoveredMaterialColor=(R=0.02,G=0.02,B=0.02,A=1.0)
 bEnableOnScreenDebugMessages=true
 AllowScreenDoorFade=False
 AllowNvidiaStereo3d=False
@@ -199,11 +199,6 @@ bUseStreamingPause=false
 bKeepAllMaterialQualityLevelsLoaded=False
 bEnableColorClear=TRUE
 //DefaultPostProcessName=JoshContent.PPChain
-bSuppressMapWarnings=False
-bCookSeparateSharedMPGameContent=False
-ApexDamageParamsName=
-DefaultOnlineSubsystemName=
-DynamicCoverMeshComponentName=
 
 [PlatformInterface]
 CloudStorageInterfaceClassName=
@@ -351,6 +346,7 @@ Paths=..\..\DukeGame\Content
 Paths=..\..\DukeGame\__Trashcan
 LocalizationPaths=..\..\DukeGame\Localization
 SavePath=..\..\DukeGame\Save
+Extensions=dnfmap
 SeekFreePCPaths=..\..\DukeGame\CookedPC
 SeekFreePCExtensions=xxx
 
@@ -539,95 +535,6 @@ PackagesToBeFullyLoadedAtStartup=EngineFonts
 PackagesToBeFullyLoadedAtStartup=EngineResources
 PackagesToBeFullyLoadedAtStartup=Engine_MI_Shaders
 PackagesToBeFullyLoadedAtStartup=MapTemplateIndex
-BrowserManagerClassName=
-ThumbnailManagerClassName=
-FarClippingPlane=0.000000
-GridEnabled=True
-SnapScaleEnabled=True
-SnapVertices=False
-ScaleGridSize=5
-SnapDistance=10.000000
-GridSizes[0]=1.000000
-GridSizes[1]=2.000000
-GridSizes[2]=4.000000
-GridSizes[3]=8.000000
-GridSizes[4]=16.000000
-GridSizes[5]=32.000000
-GridSizes[6]=64.000000
-GridSizes[7]=128.000000
-GridSizes[8]=256.000000
-GridSizes[9]=512.000000
-GridSizes[10]=1024.000000
-CurrentGridSz=4
-RotGridEnabled=True
-RotGridSize=(Pitch=1024,Yaw=1024,Roll=1024)
-AngleSnapType=0
-UseSizingBox=False
-UseAxisIndicator=True
-FOVAngle=90.000000
-GodMode=True
-AutoSaveDir=..\..\DukeGame\Autosaves
-InvertwidgetZAxis=True
-GameCommandLine=-log
-EditPackagesInPath=..\..\Development\Src
-EditPackagesOutPath=..\..\DukeGame\Script
-FRScriptOutputPath=..\..\DukeGame\ScriptFinalRelease
-AlwaysShowTerrain=False
-UseActorRotationGizmo=False
-bShowBrushMarkerPolys=False
-bUseMayaCameraControls=True
-bPrefabsLocked=True
-bEnableSocketSnapping=False
-bEnableSocketNames=False
-bBuildReachSpecs=False
-bGroupingActive=True
-HeightMapExportClassName=
-InEditorGameURLOptions=
-PlayInEditorWidth=1280
-PlayInEditorHeight=720
-bMobilePreviewPortrait=False
-BuildPlayDevice=0
-TemplateMapFolders=..\..\Engine\Content\Maps\Templates
-MatineeCaptureResolutionX=0
-MatineeCaptureResolutionY=0
-bCustomCameraAlignEmitter=True
-CustomCameraAlignEmitterDistance=100.000000
-bDrawSocketsInGMode=False
-LocalPlayerClassName=UnrealEd.EditorPlayer
-bUseBackgroundLevelStreaming=True
-bSubtitlesEnabled=True
-bSubtitlesForcedOff=False
-bSmoothFrameRate=False
-bCheckForMultiplePawnsSpawnedInAFrame=False
-bForceStaticTerrain=False
-bForceCPUSkinning=False
-bUsePostProcessEffects=False
-bOnScreenKismetWarnings=True
-bEnableKismetLogging=False
-bAllowMatureLanguage=False
-bPauseOnLossOfFocus=False
-DefaultPostProcessName=EngineMaterials.DefaultScenePostProcess
-ThumbnailSkeletalMeshPostProcessName=EngineMaterials.DefaultThumbnailPostProcess
-ThumbnailParticleSystemPostProcessName=EngineMaterials.DefaultThumbnailPostProcess
-ThumbnailMaterialPostProcessName=EngineMaterials.DefaultThumbnailPostProcess
-DefaultUIScenePostProcessName=EngineMaterials.DefaultUIPostProcess
-TimeBetweenPurgingPendingKillObjects=60.000000
-MaxSmoothedFrameRate=120.000000
-MinSmoothedFrameRate=5.000000
-NumPawnsAllowedToBeSpawnedInAFrame=2
-ScoutClassName=Engine.Scout
-MeshLODRange=0.000000
-CameraRotationThreshold=45.000000
-CameraTranslationThreshold=10000.000000
-PrimitiveProbablyVisibleTime=8.000000
-PercentUnoccludedRequeries=0.125000
-MaxOcclusionPixelsFraction=0.100000
-MaxFluidNumVerts=1048576
-FluidSimulationTimeLimit=30.000000
-MaxParticleResize=0
-MaxParticleResizeWarn=0
-MaxParticleVertexMemory=131972
-BeginUPTryCount=200000
 
 [Engine.DataStoreClient]
 GlobalDataStoreClasses=Engine.UIDataStore_GameResource
@@ -1123,16 +1030,8 @@ ResetStats=0
 
 [IniVersion]
 0=1359463827.000000
-1=1685317699.000000
+1=1685328179.000000
 
 [AppCompat]
 CompatLevelComposite=5
-
-[WinDrv.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
 
