Missed change from previous checkin

--- a/DukeGame/Config/DukeEngine.ini
+++ b/DukeGame/Config/DukeEngine.ini
@@ -275,7 +275,7 @@ ScreenShotPath=..\..\DukeGame\ScreenShots
 LocalizationPaths=..\..\Engine\Localization
 Extensions=upk
 Extensions=u
-Extensions=umap
+Extensions=dukemap
 SaveLocalizedCookedPackagesInSubdirectories=FALSE
 TextureFileCacheExtension=tfc
 bDisablePromptToRebuildScripts=FALSE
