--- a/DukeGame/Config/DukeEditor.ini
+++ b/DukeGame/Config/DukeEditor.ini
@@ -504,3 +504,6 @@ ModOutputDir=..\..\DukeGame\Unpublished\CookedPC\Script
 0=1359463827.000000
 1=1685317577.000000
 
+[UnrealEd.SimpleMap]
+SimpleMapName=..\..\DukeGame\Content\Maps\TestMaps\zoo.dukemap
+
