--- a/DukeGame/Config/DukeEditorUserSettings.ini
+++ b/DukeGame/Config/DukeEditorUserSettings.ini
@@ -103,8 +103,8 @@ DlgTextureProperties=1212,276,706,347
 [EditorFrame]
 FrameClassName=WxEditorFrame
 LocalizationFile=UnrealEd
-FramePos.x=440
-FramePos.y=100
+FramePos.x=1023
+FramePos.y=26
 FrameSize.x=1832
 FrameSize.y=1152
 FrameMaximized=0
@@ -117,7 +117,7 @@ UseScriptDefinedOrder=True
 
 [StartupTipDialog]
 ShowAtStartup=True
-CurrentTip=8
+CurrentTip=10
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -530,7 +530,8 @@ bFilterBSP=True
 bFilterTerrain=True
 
 [MRU]
-MRUItem0=D:\projects\Duke2004\DukeGame\Content\Maps\z1l2.dnfmap
+MRUItem0=..\..\DukeGame\Content\Maps\TestMaps\zoo.dukemap
+MRUItem1=D:\projects\Duke2004\DukeGame\Content\Maps\z1l2.dnfmap
 
 [PropertyWindow]
 TexAlignerDefaultSplitterPosProportionFavorites=0.292398
