--- a/Development/Src/DukeGame/DukeGame.vcxproj.filters
+++ b/Development/Src/DukeGame/DukeGame.vcxproj.filters
@@ -168,6 +168,9 @@
     <None Include="..\..\..\DukeGame\Config\DukeUI.ini">
       <Filter>Ini</Filter>
     </None>
+    <None Include="Classes\WeaponPistol.uc">
+      <Filter>Classes</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\NullSurveys.cpp">
@@ -183,6 +186,9 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="Src\DukeWeapon.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\DukePistol.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
