--- a/DukeGame/Config/DukeEditorUserSettings.ini
+++ b/DukeGame/Config/DukeEditorUserSettings.ini
@@ -99,12 +99,27 @@ MaterialEditor=256,256,1152,864
 DlgTexturePropertiesMaximized=False
 DlgTexturePropertiesMinimized=False
 DlgTextureProperties=1212,276,706,347
+AnimSetViewerMaximized=False
+AnimSetViewerMinimized=False
+AnimSetViewer=-2988,-568,1482,970
+DlgImportGenericMaximized=False
+DlgImportGenericMinimized=False
+DlgImportGeneric=1202,477,500,500
+DlgPackageGroupNameMaximized=False
+DlgPackageGroupNameMinimized=False
+DlgPackageGroupName=1520,595,416,156
+SavePkgPromptDlgMaximized=False
+SavePkgPromptDlgMinimized=False
+SavePkgPromptDlg=1167,415,400,400
+LightmassOptionsObjectFloatingPropertyWindowMaximized=False
+LightmassOptionsObjectFloatingPropertyWindowMinimized=False
+LightmassOptionsObjectFloatingPropertyWindow=64,64,350,500
 
 [EditorFrame]
 FrameClassName=WxEditorFrame
 LocalizationFile=UnrealEd
-FramePos.x=1023
-FramePos.y=26
+FramePos.x=451
+FramePos.y=39
 FrameSize.x=1832
 FrameSize.y=1152
 FrameMaximized=0
@@ -117,7 +132,7 @@ UseScriptDefinedOrder=True
 
 [StartupTipDialog]
 ShowAtStartup=True
-CurrentTip=10
+CurrentTip=22
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -156,6 +171,12 @@ QualityLevel=0
 bUseLightmass=true
 NumUnusedLocalCores=1
 ShowLightingBuildInfo=false
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+OnlyBuildVisibleLevels=False
+GenerateBuildingLODTex=True
+UseErrorColoring=False
 
 [MatineeCreateMovieOptions]
 CloseEditor=false
@@ -180,7 +201,7 @@ Disabled=True
 AutoAddNewFiles=True
 
 [Directories2]
-UNR=D:\projects\Duke2004\DukeGame\Content\Maps
+UNR=..\..\DukeGame\Content\Maps\TestMaps
 Brush=..\..\DukeGame\Content
 2DS=..\..\DukeGame\Content
 PSA=..\..\DukeGame\Content
@@ -359,6 +380,11 @@ bResampleAnimations=False
 bImportRigidAnimation=False
 bCombineMeshes=False
 bSplitNonMatchingTriangles=True
+bOverrideTangents=False
+bUseT0AsRefPose=False
+bReplaceVertexColors=False
+bExplicitNormals=False
+bOneConvexHullPerUCX=False
 
 [SoundSettings]
 ChirpSoundClasses=Dialog DialogMedium DialogLoud DialogDeafening
@@ -446,7 +472,7 @@ Documentation_Docked=True
 Documentation_Visible=True
 
 [UnrealEd]
-RecentAssets="  DnMovies.Starbsrt DnMovies.Starbsrt_Mat "
+RecentAssets="        wp_pistol.WP_PistolMesh Duke.DukeMesh_Anims Duke.DukeMesh edf2.edf2_Anims edf2.edf2 DnMovies.Starbsrt_Mat DnMovies.Starbsrt wp_pistol.Materials.Master_Weapon_Shader "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -462,7 +488,7 @@ IsFilterPanelCollapsed=False
 FilterPanelSearchString=
 LeftPanelWidth=200.000000
 IsLeftPanelCollapsed=False
-ExpandedPackages=/DukeGame;/DukeGame/Content;/DukeGame/Content/DnMovies;
+ExpandedPackages=/DukeGame;/DukeGame/Content;/DukeGame/Content/Cannibal;/DukeGame/Content/Weapons;/DukeGame/Content/Weapons/wp_pistol;/DukeGame/Content/DnMovies;
 LeftSubpanelsState=mSharedCollectionsSizer:False:379.051654091701|mPrivateCollectionsSizer:False:58.4886825304701|mPackagesSizer:False:208.459663377829|
 SelectedSharedCollection=
 IsUsingFlatPackageList=False
@@ -532,17 +558,31 @@ bFilterTerrain=True
 [MRU]
 MRUItem0=..\..\DukeGame\Content\Maps\TestMaps\zoo.dukemap
 MRUItem1=D:\projects\Duke2004\DukeGame\Content\Maps\z1l2.dnfmap
+MRUItem2=D:\projects\Duke2004\DukeGame\Content\Maps\testmaps\zoo.dnfmap
 
 [PropertyWindow]
 TexAlignerDefaultSplitterPosProportionFavorites=0.292398
 TexAlignerDefaultSplitterPosProportion=0.500000
-PreviewMaterialSplitterPosProportionFavorites=0.246441
+PreviewMaterialSplitterPosProportionFavorites=0.121886
 PreviewMaterialSplitterPosProportion=0.352734
 TextureMovieSplitterPosProportionFavorites=0.289017
 TextureMovieSplitterPosProportion=0.500000
+SkeletalMeshSplitterPosProportionFavorites=0.500000
+SkeletalMeshSplitterPosProportion=0.500000
+AnimSetSplitterPosProportionFavorites=0.500000
+AnimSetSplitterPosProportion=0.500000
+AnimSequenceSplitterPosProportionFavorites=0.500000
+AnimSequenceSplitterPosProportion=0.500000
+AnimSetFactoryNewSplitterPosProportionFavorites=0.501520
+AnimSetFactoryNewSplitterPosProportion=0.501475
+FbxImportUISplitterPosProportionFavorites=0.286533
+FbxImportUISplitterPosProportion=0.501393
+LightmassOptionsObjectSplitterPosProportionFavorites=0.308642
+LightmassOptionsObjectSplitterPosProportion=0.500000
 
 [DockingLayoutVersionsAUI]
 MaterialEditor=1
+AnimSetViewer=1
 
 [MaterialEditor]
 LightDir=P=-8192 Y=8192 R=0
@@ -556,6 +596,8 @@ Surface=
 Object=
 TextureMovie=
 Texture=
+SkeletalMesh=Object.SkeletalMesh.Origin Object.SkeletalMesh.RotOrigin
+FbxImportUI=Object.General Object.SkeletalMesh Object.StaticMesh Object.Materials
 
 [TextureProperties]
 PreviewPaddingX=5
@@ -570,4 +612,7 @@ CheckerboardCheckerPixelNum=16
 CheckerboardColorOne=(R=120,G=120,B=120,A=255)
 CheckerboardColorTwo=(R=60,G=60,B=60,A=255)
 SplitterPos=400
+
+[AnimSetViewer]
+LightDir=P=-8192 Y=-8192 R=0
 
