--- a/DukeGame/Config/DukeInput.ini
+++ b/DukeGame/Config/DukeInput.ini
@@ -316,10 +316,10 @@ ManualAutoCompleteList=(Command="STARTMOVIECAPTURE",Desc="STARTMOVIECAPTURE")
 ManualAutoCompleteList=(Command="STOPMOVIECAPTURE",Desc="STOPMOVIECAPTURE")
 ManualAutoCompleteList=(Command="DoMemLeakChecking 30",Desc="Sets a timer to do a MemLeakCheck every N seconds")
 ManualAutoCompleteList=(Command="StopMemLeakChecking",Desc="Stops the periodic MemLeakCheck that was started via DoMemLeakChecking")
-HistoryTop=1
-HistoryCur=1
-History[0]=quit
-History[1]=
+HistoryTop=2
+HistoryCur=2
+History[0]=ToggleDebugCamera
+History[1]=quit
 History[2]=
 History[3]=
 History[4]=
