--- a/DukeGame/Config/DukeInput.ini
+++ b/DukeGame/Config/DukeInput.ini
@@ -316,13 +316,13 @@ ManualAutoCompleteList=(Command="STARTMOVIECAPTURE",Desc="STARTMOVIECAPTURE")
 ManualAutoCompleteList=(Command="STOPMOVIECAPTURE",Desc="STOPMOVIECAPTURE")
 ManualAutoCompleteList=(Command="DoMemLeakChecking 30",Desc="Sets a timer to do a MemLeakCheck every N seconds")
 ManualAutoCompleteList=(Command="StopMemLeakChecking",Desc="Stops the periodic MemLeakCheck that was started via DoMemLeakChecking")
-HistoryTop=2
-HistoryCur=2
+HistoryTop=5
+HistoryCur=5
 History[0]=ToggleDebugCamera
-History[1]=quit
-History[2]=
-History[3]=
-History[4]=
+History[1]=fov 100
+History[2]=quit
+History[3]=fov
+History[4]=fov 95
 History[5]=
 History[6]=
 History[7]=
