Player movement and weapon bob code moved from 2001; player movement should feel similar now. Adjusted editor text output to be less cluttered. Tagged editor as 2004.

--- a/DukeGame/Config/DukeEditorUserSettings.ini
+++ b/DukeGame/Config/DukeEditorUserSettings.ini
@@ -38,8 +38,8 @@ DlgActorSearch=379,262,881,507
 DlgActorFactory=783,544,553,311,0
 DlgBuildProgress=760,475,406,200
 SurfaceProperties=647,491,545,758
-DockingContainer=-2520,-430,1178,1071
-FloatingFrame_DockingContainer=-2520,-430,1178,1071
+DockingContainer=865,81,1178,1071
+FloatingFrame_DockingContainer=865,81,1178,1071
 DlgGBSearch=953,568,400,300,0
 DlgSoundNodeWaveOptions=496,238,664,324,0
 DlgMove=760,475,497,408,0
@@ -123,12 +123,15 @@ StaticMeshEditor=64,64,1692,1006
 ColorPickerMaximized=False
 ColorPickerMinimized=False
 ColorPicker=1429,548,218,329
+CascadeEditorMaximized=False
+CascadeEditorMinimized=False
+CascadeEditor=256,256,1024,768
 
 [EditorFrame]
 FrameClassName=WxEditorFrame
 LocalizationFile=UnrealEd
-FramePos.x=398
-FramePos.y=31
+FramePos.x=294
+FramePos.y=5
 FrameSize.x=2517
 FrameSize.y=1320
 FrameMaximized=0
@@ -141,7 +144,7 @@ UseScriptDefinedOrder=True
 
 [StartupTipDialog]
 ShowAtStartup=True
-CurrentTip=33
+CurrentTip=40
 
 [UnrealEd.MaterialEditorOptions]
 bShowGrid=True
@@ -332,27 +335,39 @@ ModuleColor_General_Unselected=(B=49,G=40,R=40,A=0)
 ModuleColor_General_Selected=(B=0,G=100,R=255,A=0)
 ModuleColor_TypeData_Unselected=(B=20,G=20,R=15,A=0)
 ModuleColor_TypeData_Selected=(B=0,G=100,R=255,A=0)
-ModuleColor_Beam_Unselected=(R=160,G=150,B=235)
-ModuleColor_Beam_Selected=(R=255,G=100,B=0)
-ModuleColor_Trail_Unselected=(R=130,G=235,B=170)
-ModuleColor_Trail_Selected=(R=255,G=100,B=0)
-ModuleColor_Spawn_Unselected=(R=200,G=100,B=100)
-ModuleColor_Spawn_Selected=(R=255,G=50,B=50)
-ModuleColor_Required_Unselected=(R=200,G=200,B=100)
-ModuleColor_Required_Selected=(R=255,G=225,B=50)
-ModuleColor_Event_Unselected=(R=64,G=64,B=255)
-ModuleColor_Event_Selected=(R=0,G=0,B=255)
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
 bShowGrid=false
-GridColor_Hi=(R=0,G=100,B=255)
-GridColor_Low=(R=0,G=100,B=255)
-GridPerspectiveSize=1024
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+GridPerspectiveSize=1024.000000
 PostProcessChainName=EditorMaterials.Cascade.DefaultCascadePostProcess
 ShowPPFlags=0
 bUseSlimCascadeDraw=true
 SlimCascadeDrawHeight=24
 bCenterCascadeModuleText=true
 Cascade_MouseMoveThreshold=4
-MotionModeRadius=150.0
+MotionModeRadius=150.000000
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+bShowFloor=False
+ParticleMemoryUpdateTime=0.000000
+FloorMesh=EditorMeshes.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0,Yaw=0,Roll=0)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [UnrealEd.LensFlareEditorOptions]
 LFED_BackgroundColor=(B=0.098,G=0.078,R=0.078,A=1.0)
@@ -478,7 +493,7 @@ Documentation_Docked=True
 Documentation_Visible=True
 
 [UnrealEd]
-RecentAssets="                   wp_pistol.WP_PistolMesh z1l2_data.airforcebase_Masking_smallfence1ABC_Mat z1l2_data.vegas_casinos_ext_BuildingBallysAB_Mat z1l2_data.dcasino_logos_dcaslogo1RC_Mat edf2.edf2_Anims Duke.DukeMesh_Anims Duke.DukeMesh edf2.edf2 DnMovies.Starbsrt wp_pistol.Materials.Master_Weapon_Shader z1l2_data.dcasino_signs_dcassign7aRC_Mat DnMovies.StarBurstOtherSide DnMovies.Starbsrt_Mat z1l2_data.vegas_casino1_dukesym3BC_Mat zone1_vegas.palm2_0_Mat zone1_vegas.palm2_1_Mat zone1_vegas.palm2_2_Mat zone1_vegas.palm2 wp_pistol.WP_PistolMesh_Anims "
+RecentAssets="                        FX_LensFlares.Materials.M_FX_Lensflares_105MM_Prime01 GOW_War_Effects_UDK.Textures.T_COG_MuzzleflashSpray_Masked_Tex wp_pistol.WP_PistolMesh_Anims zone1_vegas.palm2 zone1_vegas.palm2_2_Mat zone1_vegas.palm2_1_Mat zone1_vegas.palm2_0_Mat z1l2_data.vegas_casino1_dukesym3BC_Mat DnMovies.Starbsrt_Mat DnMovies.StarBurstOtherSide z1l2_data.dcasino_signs_dcassign7aRC_Mat wp_pistol.Materials.Master_Weapon_Shader DnMovies.Starbsrt edf2.edf2 Duke.DukeMesh Duke.DukeMesh_Anims edf2.edf2_Anims z1l2_data.dcasino_logos_dcaslogo1RC_Mat z1l2_data.vegas_casinos_ext_BuildingBallysAB_Mat z1l2_data.airforcebase_Masking_smallfence1ABC_Mat wp_pistol.WP_PistolMesh UDK_Rain.Particles.P_RainSplashes T_FX_UT3.Effects.P_FX_HeadShot T_FX_UT3.Effects.P_FX_HeadShot_Corrupt "
 
 [ReferencedAssets]
 SplitterPos=200
@@ -492,9 +507,9 @@ CustomDepth=0
 FilterPanelHeight=200.000000
 IsFilterPanelCollapsed=False
 FilterPanelSearchString=
-LeftPanelWidth=200.000000
+LeftPanelWidth=444.000000
 IsLeftPanelCollapsed=False
-ExpandedPackages=/DukeGame;/DukeGame/Content;/DukeGame/Content/Cannibal;/DukeGame/Content/Textures;/DukeGame/Content/Textures/z1l2_data;/DukeGame/Content/Weapons;/DukeGame/Content/DnMovies;
+ExpandedPackages=/DukeGame;/DukeGame/Content;/DukeGame/Content/Textures/z1l2_data;/DukeGame/Content/DnMovies;
 LeftSubpanelsState=mSharedCollectionsSizer:False:479.388856645386|mPrivateCollectionsSizer:False:73.9709808473595|mPackagesSizer:False:263.640162507254|
 SelectedSharedCollection=
 IsUsingFlatPackageList=False
@@ -607,11 +622,16 @@ TextureFactorySplitterPosProportionFavorites=0.286533
 TextureFactorySplitterPosProportion=0.501393
 StaticMeshSplitterPosProportion=0.500000
 StaticMeshSplitterPosProportionFavorites=0.344828
+Texture2DSplitterPosProportionFavorites=0.289017
+Texture2DSplitterPosProportion=0.500000
+ParticleSystemSplitterPosProportionFavorites=0.500000
+ParticleSystemSplitterPosProportion=0.500000
 
 [DockingLayoutVersionsAUI]
 MaterialEditor=1
 AnimSetViewer=1
 StaticMeshEditor=2
+Cascade=1
 
 [MaterialEditor]
 LightDir=P=-8192 Y=8192 R=0
@@ -621,8 +641,8 @@ PrimType=1
 PreviewMaterial=Object.Material Object.Lightmass
 Material=Object.Material Object.Lightmass
 MaterialInterface=Object.Material Object.Lightmass
-Surface=Object.Material Object.Lightmass
-Object=Object.AnimSequence.Notifies.Notifies[0] Object.AnimSequence.CompressionScheme.Object
+Surface=
+Object=
 TextureMovie=
 Texture=
 SkeletalMesh=Object.SkeletalMesh.Origin Object.SkeletalMesh.RotOrigin
@@ -647,6 +667,8 @@ WorldInfo=Object.Rendering.DefaultPostProcessSettings
 ZoneInfo=Object.Rendering.DefaultPostProcessSettings
 Info=Object.Rendering.DefaultPostProcessSettings
 AnimSet=Object.AnimSet
+Texture2D=
+ParticleSystem=
 
 [TextureProperties]
 PreviewPaddingX=5
@@ -667,4 +689,7 @@ LightDir=P=-8192 Y=-8192 R=0
 
 [StaticMeshEditor]
 LightDir=P=-8192 Y=8192 R=0
+
+[CascadeEditor]
+LightDir=P=-8192 Y=32764 R=0
 
