--- a/DukeGame/Config/DefaultEngine.ini
+++ b/DukeGame/Config/DefaultEngine.ini
@@ -3,8 +3,8 @@ BasedOn=..\Engine\Config\BaseEngine.ini
 
 [URL]
 MapExt=dnfmap
-Map=DukeEntry.dnfmap
-LocalMap=DukeEntry.dnfmap
+Map=MainMenu.dnfmap
+LocalMap=MainMenu.dnfmap
 TransitionMap=DukeEntry.dnfmap
 EXEName=DukeGame.exe
 DebugEXEName=DEBUG-DukeGame.exe
