--- a/DukeGame/Config/DukeEngine.ini
+++ b/DukeGame/Config/DukeEngine.ini
@@ -1,8 +1,8 @@
 [URL]
 Protocol=unreal
 Name=Player
-Map=DukeEntry.dnfmap
-LocalMap=DukeEntry.dnfmap
+Map=MainMenu.dnfmap
+LocalMap=MainMenu.dnfmap
 LocalOptions=
 TransitionMap=DukeEntry.dnfmap
 MapExt=dnfmap
@@ -529,7 +529,6 @@ EditPackagesOutPath=..\..\DukeGame\Script
 FRScriptOutputPath=..\..\DukeGame\ScriptFinalRelease
 EditPackages=DukeGame
 InEditorGameURLOptions=
-FlipNormalMapGreen=False
 
 [UnrealEd.UnrealEdEngine]
 AutoSaveIndex=0
@@ -576,7 +575,7 @@ EditPackagesOutPath=..\..\DukeGame\Script
 FRScriptOutputPath=..\..\DukeGame\ScriptFinalRelease
 AlwaysShowTerrain=False
 UseActorRotationGizmo=False
-bShowBrushMarkerPolys=True
+bShowBrushMarkerPolys=False
 bUseMayaCameraControls=True
 bPrefabsLocked=True
 bEnableSocketSnapping=False
@@ -585,8 +584,8 @@ bBuildReachSpecs=False
 bGroupingActive=True
 HeightMapExportClassName=
 InEditorGameURLOptions=
-PlayInEditorWidth=1280
-PlayInEditorHeight=720
+PlayInEditorWidth=1920
+PlayInEditorHeight=1080
 bMobilePreviewPortrait=False
 BuildPlayDevice=0
 TemplateMapFolders=..\..\Engine\Content\Maps\Templates
@@ -1125,5 +1124,8 @@ ResetStats=0
 
 [IniVersion]
 0=1685430794.000000
-1=1685328179.000000
+1=1685575196.000000
+
+[AppCompat]
+CompatLevelComposite=5
 
