--- a/DukeGame/Config/DukeInput.ini
+++ b/DukeGame/Config/DukeInput.ini
@@ -316,18 +316,18 @@ ManualAutoCompleteList=(Command="STARTMOVIECAPTURE",Desc="STARTMOVIECAPTURE")
 ManualAutoCompleteList=(Command="STOPMOVIECAPTURE",Desc="STOPMOVIECAPTURE")
 ManualAutoCompleteList=(Command="DoMemLeakChecking 30",Desc="Sets a timer to do a MemLeakCheck every N seconds")
 ManualAutoCompleteList=(Command="StopMemLeakChecking",Desc="Stops the periodic MemLeakCheck that was started via DoMemLeakChecking")
-HistoryTop=7
-HistoryCur=7
+HistoryTop=10
+HistoryCur=10
 History[0]=ToggleDebugCamera
 History[1]=fov 100
-History[2]=quit
-History[3]=fov
-History[4]=fov 95
-History[5]=noclip
-History[6]=ghost
-History[7]=
-History[8]=
-History[9]=
+History[2]=fov
+History[3]=fov 95
+History[4]=noclip
+History[5]=ghost
+History[6]=stat unit
+History[7]=open z1l2
+History[8]=disconnect
+History[9]=quit
 History[10]=
 History[11]=
 History[12]=
