--- a/Development/Src/DukeGame/DukeGame.vcxproj.filters
+++ b/Development/Src/DukeGame/DukeGame.vcxproj.filters
@@ -183,6 +183,15 @@
     <None Include="Classes\Crushed.uc">
       <Filter>Classes</Filter>
     </None>
+    <None Include="Classes\DukeMenuGameInfo.uc">
+      <Filter>Classes</Filter>
+    </None>
+    <None Include="Classes\DukeMainMenu.uc">
+      <Filter>Classes</Filter>
+    </None>
+    <None Include="Classes\DukeMenuController.uc">
+      <Filter>Classes</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\NullSurveys.cpp">
@@ -210,6 +219,12 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="Src\Decoration.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\DukeGameInfo.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\DukeMainMenu.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
