--- a/DukeGame/Config/DukeEngine.ini
+++ b/DukeGame/Config/DukeEngine.ini
@@ -529,9 +529,10 @@ EditPackagesOutPath=..\..\DukeGame\Script
 FRScriptOutputPath=..\..\DukeGame\ScriptFinalRelease
 EditPackages=DukeGame
 InEditorGameURLOptions=
+FlipNormalMapGreen=False
 
 [UnrealEd.UnrealEdEngine]
-AutoSaveIndex=0
+AutoSaveIndex=8
 PackagesToBeFullyLoadedAtStartup=EditorMaterials
 PackagesToBeFullyLoadedAtStartup=EditorMeshes
 PackagesToBeFullyLoadedAtStartup=EditorResources
@@ -1128,4 +1129,12 @@ ResetStats=0
 
 [AppCompat]
 CompatLevelComposite=5
+
+[WinDrv.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
